[tool.poetry]
name = "chapter3problems"
version = "0.1.0"
description = ""
authors = ["Laura Froelich <laura.frolich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
